# Mgrk_bot

./: Pipfile  README.md  cli.py  config.json  database.sqlite3-shm  database.sqlite3-wal  phrases.json  pyproject.toml  requirements.txt
bot/: __main__.py  markups.py  state.py
bot/filters/: admin.py
bot/middleware/: services_di.py
bot/models/config/: bot_config.py
bot/models/phrases/: admin.py  bot_phrases.py
bot/routers/admin/: __init__.py  admin.py  export.py  inline_menu.py  mailing.py  reply_menu.py
bot/routers/user/: __init__.py  inline_menu.py  reply_menu.py  start.py
bot/services/database/: __init__.py  models.py
bot/utils/: dispatcher.py  enums.py  router.py  service_manager.py
